// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (max-yield) > produces stable top-N ordering per scenario under max-yield 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hsbc-premier",
    "sc-ultimate",
    "axis-atlas",
    "indusind-eazydiner",
    "hdfc-infinia-metal",
    "amex-platinum-travel",
    "hdfc-regalia-gold",
    "sbi-card-pulse",
    "indusind-eazydiner-platinum",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "combo-dining-under-5000": [
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "axis-airtel",
    "bobcard-eterna",
    "sbi-card-prime",
    "axis-fibe",
    "shaurya-select-sbi",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "sc-ultimate",
    "icici-adani-one-signature",
    "amex-platinum-travel",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-flipkart-super-elite",
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-horizon",
    "axis-magnus",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-flipkart",
  ],
  "forex": [
    "kotak-infinite",
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "amex-gold",
    "axis-magnus-burgundy",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-diners-club-black-metal",
    "equitas-powermiles",
    "hdfc-infinia-metal",
    "au-ixigo",
    "hdfc-regalia-gold",
  ],
  "forex-zero": [
    "au-ixigo",
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "kotak-solitaire",
    "yes-marquee",
    "kotak-white-reserve",
    "sc-beyond",
    "idfc-mayura",
    "axis-reserve",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "au-ixigo",
    "axis-magnus",
    "kotak-solitaire",
  ],
  "issuer-amex": [
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-airtel",
    "axis-flipkart-super-elite",
    "axis-ace",
    "axis-horizon",
    "axis-indigo-premium",
    "axis-privilege-easy",
    "axis-flipkart",
    "axis-fibe",
    "axis-cashback",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-marriott-bonvoy",
    "hdfc-swiggy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-shoppers-stop-black",
    "hdfc-shoppers-stop",
    "hdfc-phonepe-ultimo",
    "hdfc-millennia",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-coral-rupay",
    "icici-adani-one-signature",
    "icici-coral",
    "icici-amazon-pay",
    "icici-hpcl-super-saver",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-sapphiro",
    "icici-emeralde",
    "icici-rubyx",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "sbi-card-pulse",
    "krisflyer-sbi-apex",
    "sbi-cashback",
    "reliance-sbi-prime",
    "indigo-sbi-elite",
    "sbi-card-prime",
    "titan-sbi",
    "phonepe-sbi-purple",
    "sbi-card-miles-elite",
    "sbi-card-elite",
    "tata-neu-infinity-sbi",
  ],
  "lifetime-free": [
    "au-ixigo",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "federal-imperio",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-signet",
  ],
  "lounge": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "phonepe-sbi-select-black",
    "au-ixigo",
  ],
  "lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "phonepe-sbi-select-black",
    "au-ixigo",
  ],
  "max-fee-5000-query": [
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "phonepe-sbi-select-black",
    "au-ixigo",
    "amex-platinum-travel",
    "kotak-solitaire",
    "rbl-platinum-delight",
  ],
  "max-fee-zero": [
    "kotak-infinite",
    "au-ixigo",
    "kotak-solitaire",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "icici-amazon-pay",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "federal-imperio",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "amex-smartearn",
    "cheq-au",
    "hdfc-moneyback-plus",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-samsung-signature",
    "flipkart-sbi",
    "axis-flipkart",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hsbc-live-plus",
    "hdfc-swiggy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy-black",
    "axis-airtel",
    "hdfc-swiggy-orange",
    "hsbc-rupay-cashback",
    "axis-ace",
    "axis-fibe",
    "axis-rewards",
    "axis-select",
    "axis-my-zone",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "hdfc-swiggy",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-reserv",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "shaurya-select-sbi",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
  ],
  "network-visa": [
    "hsbc-visa-platinum",
    "sc-priority-visa-infinite",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "axis-atlas",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "indusind-eazydiner",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
  ],
  "segment-beginner": [
    "au-ixigo",
    "hdfc-diners-club-privilege",
    "amex-smartearn",
    "hsbc-live-plus",
    "hsbc-visa-platinum",
    "hdfc-shoppers-stop",
    "yes-kiwi",
    "sbi-cashback",
    "axis-airtel",
    "hdfc-swiggy-black",
    "rbl-platinum-delight",
    "yes-first-preferred",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "phonepe-sbi-select-black",
    "amex-membership-rewards",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "amex-gold",
    "yes-marquee",
    "sbi-card-prime",
    "sbi-card-elite",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "axis-reserve",
    "amex-platinum-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "amex-platinum-travel",
    "kotak-solitaire",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "phonepe-sbi-select-black",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "equitas-powermiles",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "au-ixigo",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "bobcard-eterna",
    "idfc-mayura",
    "axis-atlas",
    "icici-times-black",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "axis-atlas",
  ],
  "spend-level-light": [
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hsbc-premier",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
  ],
  "spend-level-mid": [
    "kotak-infinite",
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "kotak-infinite",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "yes-kiwi",
    "hsbc-live-plus",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "axis-airtel",
    "hdfc-swiggy-orange",
    "sbi-cashback",
    "hsbc-rupay-cashback",
    "titan-sbi",
    "phonepe-sbi-purple",
    "hdfc-phonepe-ultimo",
  ],
  "usecase-dining": [
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "axis-airtel",
    "bobcard-eterna",
    "sbi-card-prime",
    "axis-fibe",
    "shaurya-select-sbi",
  ],
  "usecase-entertainment": [
    "phonepe-sbi-select-black",
    "au-ixigo",
    "hdfc-marriott-bonvoy",
    "hsbc-live-plus",
    "hdfc-diners-club-privilege",
    "indusind-eazydiner",
    "sbi-cashback",
    "yes-marquee",
    "hsbc-rupay-cashback",
    "bobcard-eterna",
    "sbi-card-prime",
    "phonepe-sbi-purple",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "idfc-first-power",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "axis-indianoil",
    "axis-indianoil-premium",
    "icici-hpcl-super-saver",
    "idfc-first-earn",
    "sc-platinum-rewards",
  ],
  "usecase-grocery": [
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "au-ixigo",
    "kotak-cashback-plus",
    "rbl-shoprite",
    "bpcl-sbi-octane",
    "phonepe-sbi-select-black",
    "indusind-eazydiner",
    "sbi-card-prime",
    "sbi-cashback",
  ],
  "usecase-online": [
    "csb-jupiter-edge-plus",
    "phonepe-sbi-select-black",
    "indusind-eazydiner",
    "sbi-cashback",
    "kotak-cashback-plus",
    "axis-cashback",
    "au-ixigo",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "axis-fibe",
    "yes-marquee",
    "yes-reserv",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "shaurya-select-sbi",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
  ],
}
`;

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "hdfc-infinia-metal",
    "phonepe-sbi-select-black",
    "hdfc-indianoil",
    "hdfc-phonepe-ultimo",
    "sbi-card-prime",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "axis-atlas",
    "amex-gold",
    "sc-ultimate",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "axis-magnus-burgundy",
    "axis-magnus",
    "amex-smartearn",
    "amex-platinum-reserve",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "axis-magnus-burgundy",
    "axis-magnus",
    "amex-smartearn",
    "amex-platinum-reserve",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "hdfc-infinia-metal",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-prime",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
    "hsbc-premier",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sbi-card-prime",
    "sc-ultimate",
    "amex-gold",
    "axis-ace",
    "hdfc-infinia-metal",
    "bobcard-hpcl-energie",
    "phonepe-sbi-select-black",
    "idfc-first-power",
    "bobcard-select",
    "cheq-au",
    "yes-ace",
  ],
  "combo-dining-under-5000": [
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "bobcard-eterna",
    "yes-paisabazaar-paisasave",
    "sbi-card-prime",
    "yes-first-preferred",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "hsbc-rupay-cashback",
    "rbl-platinum-maxima-plus",
    "shaurya-select-sbi",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "sc-ultimate",
    "icici-adani-one-signature",
    "amex-platinum-travel",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-flipkart-super-elite",
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-horizon",
    "axis-magnus",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-flipkart",
  ],
  "forex": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "equitas-powermiles",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "bobcard-etihad-guest-premium",
    "icici-times-black",
    "axis-magnus",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "au-ixigo",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
    "axis-atlas",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "kotak-solitaire",
    "kotak-white-reserve",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-reserve",
    "icici-times-black",
    "aurum-sbi",
    "sc-beyond",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-membership-rewards",
    "amex-gold",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-airtel",
    "axis-horizon",
    "axis-flipkart",
    "axis-indigo-premium",
    "axis-cashback",
    "axis-ace",
    "axis-samsung-signature",
    "axis-fibe",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-tata-neu-infinity",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-pixel-play",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-amazon-pay",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-coral-rupay",
    "icici-sapphiro",
    "icici-emeralde",
    "icici-coral",
    "icici-sapphiro-rupay",
    "icici-rubyx",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "krisflyer-sbi-apex",
    "tata-neu-infinity-sbi",
    "indigo-sbi-elite",
    "aurum-sbi",
    "sbi-card-miles-elite",
    "titan-sbi",
    "sbi-card-prime",
    "sbi-card-elite",
    "sbi-cashback",
    "flipkart-sbi",
    "sbi-card-miles-prime",
  ],
  "lifetime-free": [
    "hsbc-visa-platinum",
    "au-ixigo",
    "yes-kiwi",
    "indusind-tiger",
    "axis-fibe",
    "csb-jupiter-edge-plus",
    "hsbc-rupay-platinum",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "yes-paisabazaar-paisasave-rupay",
    "idfc-first-wealth",
  ],
  "lounge": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "sc-beyond",
    "icici-times-black",
    "amex-platinum",
  ],
  "lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "sc-beyond",
    "icici-times-black",
    "amex-platinum",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "phonepe-sbi-select-black",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "equitas-selfe",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "hsbc-visa-platinum",
    "au-ixigo",
    "yes-kiwi",
    "indusind-tiger",
    "icici-amazon-pay",
    "axis-fibe",
    "csb-jupiter-edge-plus",
    "kotak-infinite",
    "hsbc-rupay-platinum",
    "axis-kwik",
    "federal-imperio",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "hdfc-moneyback-plus",
    "amex-smartearn",
    "cheq-au",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "flipkart-sbi",
    "axis-flipkart",
    "axis-samsung-signature",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-diners-club-privilege",
    "axis-airtel",
    "hsbc-live-plus",
    "axis-ace",
    "axis-fibe",
    "hsbc-rupay-cashback",
    "axis-rewards",
    "axis-my-zone",
    "axis-select",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "hdfc-swiggy",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-reserv",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "shaurya-select-sbi",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
  ],
  "network-visa": [
    "hsbc-visa-platinum",
    "sc-priority-visa-infinite",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "axis-atlas",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "indusind-eazydiner",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
  ],
  "segment-beginner": [
    "au-ixigo",
    "hdfc-diners-club-privilege",
    "amex-smartearn",
    "hsbc-live-plus",
    "hsbc-visa-platinum",
    "hdfc-shoppers-stop",
    "yes-kiwi",
    "sbi-cashback",
    "axis-airtel",
    "hdfc-swiggy-black",
    "rbl-platinum-delight",
    "yes-first-preferred",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "phonepe-sbi-select-black",
    "amex-membership-rewards",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "amex-gold",
    "yes-marquee",
    "sbi-card-prime",
    "sbi-card-elite",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "axis-reserve",
    "amex-platinum-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "amex-platinum-travel",
    "kotak-solitaire",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "phonepe-sbi-select-black",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "kotak-solitaire",
    "axis-magnus",
    "axis-atlas",
    "hdfc-regalia-gold",
    "icici-times-black",
    "yes-marquee",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "equitas-powermiles",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "au-ixigo",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "bobcard-eterna",
    "idfc-mayura",
    "axis-atlas",
    "icici-times-black",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "icici-times-black",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "sc-ultimate",
    "amex-platinum-travel",
    "phonepe-sbi-select-black",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-times-black",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hsbc-live-plus",
    "hdfc-swiggy",
    "hsbc-rupay-cashback",
    "sbi-cashback",
    "hdfc-phonepe-ultimo",
    "axis-airtel",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "axis-ace",
    "hdfc-millennia",
    "titan-sbi",
  ],
  "usecase-dining": [
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "bobcard-eterna",
    "yes-paisabazaar-paisasave",
    "hdfc-marriott-bonvoy",
    "sbi-card-prime",
    "yes-first-preferred",
    "indusind-eazydiner",
    "hsbc-rupay-cashback",
    "rbl-platinum-maxima-plus",
    "shaurya-select-sbi",
  ],
  "usecase-entertainment": [
    "phonepe-sbi-select-black",
    "yes-marquee",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "yes-reserv",
    "sbi-card-prime",
    "bobcard-eterna",
    "sbi-card-elite",
    "sbi-cashback",
    "phonepe-sbi-purple",
    "au-ixigo",
    "hsbc-live-plus",
  ],
  "usecase-fuel": [
    "idfc-first-power-plus",
    "bpcl-sbi-octane",
    "axis-indianoil-easy",
    "axis-indianoil",
    "hdfc-indianoil",
    "idfc-first-power",
    "axis-indianoil-premium",
    "sc-platinum-rewards",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
  ],
  "usecase-grocery": [
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "au-ixigo",
    "sbi-card-prime",
    "hdfc-moneyback-plus",
    "bpcl-sbi-octane",
    "kotak-cashback-plus",
    "phonepe-sbi-select-black",
    "shaurya-select-sbi",
    "yes-pop-club",
    "rbl-platinum-maxima-plus",
  ],
  "usecase-online": [
    "phonepe-sbi-select-black",
    "sbi-cashback",
    "csb-jupiter-edge-plus",
    "bobcard-eterna",
    "indusind-eazydiner",
    "hdfc-pixel-play",
    "yes-pop-club",
    "axis-cashback",
    "simplyclick-sbi",
    "au-ixigo",
    "kotak-cashback-plus",
    "rbl-cookies",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "shaurya-select-sbi",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
  ],
}
`;

exports[`result split golden (all query modes) > snapshots section membership for every representative query under reward-type-split 1`] = `
{
  "broad-generic": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-bill-payments": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "equitas-selfe",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-education-payments": {
    "Cashback cards": [
      "hdfc-millennia",
      "titan-sbi",
      "hdfc-swiggy-black",
      "hdfc-pixel-play",
      "hdfc-pixel-go",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "axis-atlas",
      "hdfc-infinia-metal",
    ],
  },
  "category-rent": {
    "": [
      "hsbc-premier",
      "amex-platinum-travel",
      "amex-membership-rewards",
      "sc-ultimate",
      "axis-magnus-burgundy",
    ],
  },
  "category-rent-payment": {
    "": [
      "hsbc-premier",
      "amex-platinum-travel",
      "amex-membership-rewards",
      "sc-ultimate",
      "axis-magnus-burgundy",
    ],
  },
  "category-utilities": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "equitas-selfe",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-utility-bills": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "cheq-au",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "equitas-selfe",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "combo-dining-under-5000": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "yes-paisabazaar-paisasave",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "shaurya-select-sbi",
      "hdfc-marriott-bonvoy",
      "landmark-rewards-sbi-select",
    ],
  },
  "combo-premium-travel": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "equitas-powermiles",
      "krisflyer-sbi-apex",
    ],
  },
  "exact-card-atlas": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-flipkart",
      "axis-fibe",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-flipkart-super-elite",
      "axis-indigo-premium",
      "axis-horizon",
      "axis-magnus",
    ],
  },
  "forex": {
    "Cashback cards": [
      "axis-airtel",
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "csb-jupiter-edge-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
      "equitas-powermiles",
      "icici-emeralde-private-metal",
    ],
  },
  "forex-zero": {
    "": [
      "bobcard-etihad-guest-premium",
      "kotak-solitaire",
      "idfc-mayura",
      "au-ixigo",
      "rbl-world-safari",
    ],
  },
  "guest-lounge-query": {
    "": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "axis-atlas",
      "axis-magnus",
      "kotak-solitaire",
    ],
  },
  "intl-lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "axis-magnus",
      "yes-marquee",
      "kotak-solitaire",
    ],
  },
  "issuer-amex": {
    "": [
      "amex-platinum-travel",
      "amex-gold",
      "amex-membership-rewards",
      "amex-platinum-reserve",
      "amex-smartearn",
    ],
  },
  "issuer-axis": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-flipkart",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-magnus-burgundy",
      "axis-atlas",
      "axis-magnus",
      "axis-flipkart-super-elite",
      "axis-horizon",
    ],
  },
  "issuer-hdfc": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "hdfc-phonepe-ultimo",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
    ],
  },
  "issuer-icici": {
    "Cashback cards": [
      "icici-amazon-pay",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "icici-times-black",
      "icici-adani-one-signature",
      "icici-adani-one-platinum",
      "icici-makemytrip",
    ],
  },
  "issuer-sbi": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "phonepe-sbi-purple",
      "bpcl-sbi-octane",
      "flipkart-sbi",
    ],
    "Rewards cards": [
      "krisflyer-sbi-apex",
      "tata-neu-infinity-sbi",
      "indigo-sbi-elite",
      "aurum-sbi",
      "sbi-card-miles-elite",
    ],
  },
  "lifetime-free": {
    "Cashback cards": [
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
      "au-ixigo",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "au-ixigo",
      "indusind-tiger",
      "hsbc-rupay-platinum",
      "axis-kwik",
    ],
  },
  "lounge": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
    ],
  },
  "lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus",
    ],
  },
  "max-fee-5000-query": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "axis-atlas",
      "kotak-solitaire",
      "bobcard-etihad-guest-premium",
    ],
  },
  "max-fee-zero": {
    "Cashback cards": [
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "icici-amazon-pay",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "kotak-solitaire",
      "hsbc-visa-platinum",
      "au-ixigo",
      "indusind-tiger",
      "hsbc-rupay-platinum",
    ],
  },
  "merchant-amazon": {
    "Cashback cards": [
      "icici-amazon-pay",
      "cheq-au",
    ],
    "Rewards cards": [
      "hdfc-moneyback-plus",
      "amex-smartearn",
    ],
  },
  "merchant-flipkart": {
    "Cashback cards": [
      "flipkart-sbi",
      "axis-flipkart",
      "axis-samsung-signature",
      "cheq-au",
    ],
    "Rewards cards": [
      "axis-flipkart-super-elite",
      "cheq-au",
      "axis-neo",
    ],
  },
  "merchant-swiggy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "hsbc-live-plus",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "axis-rewards",
      "axis-my-zone",
      "axis-select",
      "sc-digismart",
    ],
  },
  "network-mastercard": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "sbi-cashback",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "sc-ultimate",
      "sbi-card-elite",
    ],
  },
  "network-rupay": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
  "network-visa": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "axis-atlas",
      "indusind-eazydiner",
    ],
  },
  "segment-beginner": {
    "Cashback cards": [
      "hsbc-live-plus",
      "axis-airtel",
      "hdfc-swiggy-orange",
      "yes-kiwi",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "au-ixigo",
      "hdfc-diners-club-privilege",
      "amex-smartearn",
      "hdfc-shoppers-stop",
      "hsbc-visa-platinum",
    ],
  },
  "segment-mid-premium": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "titan-sbi",
      "bpcl-sbi-octane",
      "apollo-sbi-select",
      "rbl-patanjali-swarn",
    ],
    "Rewards cards": [
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "amex-membership-rewards",
      "indusind-eazydiner",
      "hdfc-shoppers-stop-black",
    ],
  },
  "segment-premium": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "equitas-powermiles",
      "krisflyer-sbi-apex",
    ],
  },
  "segment-super-premium": {
    "": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
      "hdfc-infinia-metal",
    ],
  },
  "spend-fuel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "axis-airtel",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hsbc-travelone",
    ],
  },
  "spend-high-base": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
      "hdfc-infinia-metal",
    ],
  },
  "spend-international": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "titan-sbi",
      "hsbc-live-plus",
      "icici-amazon-pay",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "bobcard-etihad-guest-premium",
      "equitas-powermiles",
      "icici-emeralde-private-metal",
      "au-ixigo",
    ],
  },
  "spend-level-heavy": {
    "Cashback cards": [
      "hsbc-rupay-cashback",
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hdfc-phonepe-ultimo",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
    ],
  },
  "spend-level-light": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "sbi-cashback",
      "hsbc-live-plus",
      "hdfc-swiggy",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "spend-level-mid": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "hsbc-rupay-cashback",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
    ],
  },
  "spend-travel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
    ],
  },
  "usecase-cashback": {
    "": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
    ],
  },
  "usecase-dining": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "yes-paisabazaar-paisasave",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "hdfc-marriott-bonvoy",
      "shaurya-select-sbi",
      "landmark-rewards-sbi-select",
    ],
  },
  "usecase-entertainment": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "hsbc-rupay-cashback",
      "csb-jupiter-edge-plus",
    ],
    "Rewards cards": [
      "cheq-au",
      "yes-marquee",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
      "yes-reserv",
    ],
  },
  "usecase-fuel": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "idfc-indigo",
      "sc-platinum-rewards",
      "idfc-first-power-plus",
      "hdfc-indianoil",
      "axis-indianoil-premium",
    ],
  },
  "usecase-grocery": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "phonepe-sbi-select-black",
      "bpcl-sbi-octane",
    ],
    "Rewards cards": [
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "shaurya-select-sbi",
      "yes-marquee",
      "axis-indigo-premium",
    ],
  },
  "usecase-online": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "yes-pop-club",
      "au-ixigo",
      "yes-reserv",
      "cub-salaryse-level-up",
    ],
  },
  "usecase-travel": {
    "Cashback cards": [
      "axis-ace",
      "axis-fibe",
      "csb-jupiter-edge-plus",
      "apollo-sbi-select",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
    ],
  },
  "usecase-upi": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "yes-pop-club",
      "au-ixigo",
      "yes-reserv",
      "cub-salaryse-level-up",
    ],
  },
  "premium-degrade-single": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "equitas-powermiles",
      "krisflyer-sbi-apex",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
}
`;
